fixed layout issues and color clashing #3

--- a/styles.css
+++ b/styles.css
@@ -6,11 +6,18 @@
 
 body {
   font-family: 'Roboto', sans-serif;
-  background-color: #4286f4;
+  background-color: grey;
 }
 
 h1 {
   text-align: center;
+  padding-top 50%;
+  line-height: 90px;
+  font-size: 3.5rem;
+  border: 1px solid #304FFE;
+  background-color: #304FFE;
+  height: 100px;
+  color: #FAFAFA;
 }
 .card-img-top {
   height: 15rem;
@@ -18,7 +25,11 @@ h1 {
 }
 
 .card {
-  background-color: #E0E0E0
+  background-color: #E3F2FD
+}
+
+div[data-view="catalog"] {
+  margin-top: 100px;
 }
 
 .center-block {
@@ -45,11 +56,6 @@ li {
   font-size: 1.3rem;
   text-align: center;
   list-style-type: none;
-  background-color: #4286f4;
-}
-
-ul {
-  background-color: #4286f4;
 }
 
 .hidden {
@@ -58,12 +64,17 @@ ul {
 
 .cart-wrapper {
   text-align: right;
+  background-color: #A1887F;
 }
 
 .cart-item-count {
-  font-size: 50px;
-  color: red;
-  margin-right: 80px;
+  position: fixed;
+  top: 2%;
+  right: 0%;
+  z-index: 4;
+  font-size: 20px;
+  color: #BDBDBD;
+  margin-right: 20px;
   margin-bottom: 50px;
 
 }
